# SIMD-rendu

./: CMakeLists.txt
src/: lib_matmul.h  matmul-sse.c  matmul-sse16.c  matmul-sse8.c  matmul.c  matmul_scalaire.c
tests/: tests_matmul.c  tests_matmul_scalaire.c  tests_matmul_sse.c  tests_matmul_sse16.c  tests_matmul_sse8.c
